feat: add authentication validation, configuration endpoint, and Firestore integration for message handling

--- a/cdktf/.env.template
+++ b/cdktf/.env.template
@@ -1,5 +1,7 @@
 PREFIX=
 PROJECTID=pytest-runner
-BillING_ACCOUNT=
+BILLING_ACCOUNT=
 REGION=us-east1
 GOOGLE_APPLICATION_CREDENTIALS=/home/codespace/.config/gcloud/application_default_credentials.json
+XIAOICE_CHAT_SECRET_KEY=your_secret_key_here
+XIAOICE_CHAT_ACCESS_KEY=your_access_key_here
