--- a/backend/admin_tools/requirements.txt
+++ b/backend/admin_tools/requirements.txt
@@ -2,6 +2,8 @@ google
 google-cloud
 google-cloud-api-keys
 google-cloud-firestore
+google-cloud-texttospeech
+google-cloud-storage
 google-api-python-client
 google-genai
 google-adk
