feat(web-student): add real-time multilingual transcription feature
- Initialize new web-student project with Vite and Firebase dependencies.
- Implement Firebase configuration and Firestore integration for real-time data.
- Create main application logic to listen for presentation updates and display transcriptions in selected languages.
- Document feature design and implementation roadmap for real-time transcription system.

--- a/client/python/requirements.txt
+++ b/client/python/requirements.txt
@@ -10,3 +10,7 @@ pyautogui==0.9.54
 # Multi-monitor capture helper
 mss>=9.0.1
 
+# Audio Capture and Speech
+pyaudio
+google-cloud-speech
+requests
