--- a/backend/functions/config/requirements.txt
+++ b/backend/functions/config/requirements.txt
@@ -1,3 +1,8 @@
 functions-framework==3.*
 google-cloud-firestore==2.*
+google-cloud-aiplatform==1.*
+firebase-admin==6.*
+python-dotenv==1.*
+google-cloud-texttospeech==2.*
+google-cloud-storage==2.*
 google-adk
