--- a/backend/cdktf/.env.template
+++ b/backend/cdktf/.env.template
@@ -1,7 +1,8 @@
 PREFIX=
-PROJECTID=pytest-runner
+PROJECTID=langbridge-presenter
 BILLING_ACCOUNT=
 REGION=us-east1
 GOOGLE_APPLICATION_CREDENTIALS=/home/codespace/.config/gcloud/application_default_credentials.json
 XIAOICE_CHAT_SECRET_KEY=your_secret_key_here
 XIAOICE_CHAT_ACCESS_KEY=your_access_key_here
+CLIENT_PROJECT_ID=ai-presenter-client
