fix: update Firestore IAM role configuration and correct production project name in .firebaserc

--- a/client/web-student/.firebaserc
+++ b/client/web-student/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "prod": "xiaoice-class-assistant"
+    "prod": "langbridge-presenter-client"
   },
   "targets": {},
   "etags": {}
