Refactor backend seed demo class and update dependencies
- Updated requirements.txt in backend/functions/config to remove unused dependencies and retain minimal footprint.
- Enhanced seed_demo_class.py with environment variable preloading, improved slide processing, and added support for pre-generated messages.
- Introduced new functions for loading notes and slides structure, and refactored existing logic for clarity and efficiency.
- Removed the simulate_presentation function and integrated its logic into process_slide_locally for better modularity.
- Added requirements.txt for backend/seeds to manage dependencies explicitly.
- Created install_python.sh script for streamlined installation of necessary packages, including google-adk and its dependencies.

--- a/backend/functions/config/requirements.txt
+++ b/backend/functions/config/requirements.txt
@@ -1,8 +1,5 @@
 functions-framework==3.*
 google-cloud-firestore==2.*
-google-cloud-aiplatform==1.*
+# Kept for potential implicit dependencies or minimal footprint
 firebase-admin==6.*
 python-dotenv==1.*
-google-cloud-texttospeech==2.*
-google-cloud-storage==2.*
-google-adk
